# march

./: .gitignore  CLAUDE.md  Makefile  README.md  actors.md  coding-standards.md  dune  dune-project  forge.opam  getting-started.md  git-history.json  march-lsp.opam  march.opam  modules.md  progress.md  reading_list.md  repl.md  stdlib.md  syntax_reference.md  test_server.march  test_string_rc_bug.march
bench/: RESULTS.md  alphadev_sort  alphadev_sort.ll  alphadev_sort.march  array_numeric.march  bench_http_simd.sh  bench_opt.ml  binary_trees  binary_trees.ll  binary_trees.march  dataframe_bench.march  dune  fib  fib.ll  fib.march  heapsort  heapsort.ll  heapsort.march  http_get.ll  http_get.march  http_get.py  http_get.sh  http_get_close.ll  http_get_close.march  http_get_keepalive.ll  http_get_keepalive.march  insertion_sort  insertion_sort.ll  insertion_sort.march  introsort  introsort.ll  introsort.march  iolist_template.ll  iolist_template.march  island_perf_bench.mjs  island_perf_server.march  list_ops  list_ops.ll  list_ops.march  mergesort  (+36 more)
ci/: Dockerfile.ubuntu
docs/: Gemfile  _config.yml  actors.md  examples.md  getting-started.md  git-history.json  graph-data.json  index.md  installation.md  interfaces.md  linear-types.md  modules.md  pattern-matching.md  playground.md  property-testing.md  repl.md  stdlib.md  supervision.md  tooling.md  tour.md  types.md
examples/: actors.ll  actors.march  app_basic.march  capabilities  capabilities.ll  capabilities.march  codegen_case_var_slot_leak.march  counter_server  counter_server.ll  counter_server.march  csv_example.ll  csv_example.march  csv_server.march  dataframe_basic.march  debugger.ll  debugger.march  docstrings  docstrings.ll  docstrings.march  escape_test  escape_test.ll  escape_test.march  hello.march  http_hello  http_hello.ll  http_hello.march  http_requests.ll  http_requests.march  http_stream.ll  http_stream.march  http_stream_large.ll  http_stream_large.march  http_streaming.ll  http_streaming.march  http_test.march  intro_notebook.mnb  list_lib  list_lib.ll  list_lib.march  list_lib_asan  (+34 more)
forge/lib/: archive_store.ml  cmd_add.ml  cmd_archive.ml  cmd_assets.ml  cmd_bastion_gen.ml  cmd_bastion_new.ml  cmd_bastion_routes.ml  cmd_bastion_server.ml  cmd_build.ml  cmd_check.ml  cmd_clean.ml  cmd_compile.ml  cmd_depot.ml  cmd_deps.ml  cmd_doc.ml  cmd_format.ml  cmd_init.ml  cmd_install.ml  cmd_interactive.ml  cmd_lint.ml  cmd_notebook.ml  cmd_phases.ml  cmd_publish.ml  cmd_run.ml  cmd_search.ml  cmd_test.ml  dune  gen_auth.ml  project.ml  resolver_api_surface.ml  resolver_cas_package.ml  resolver_constraint.ml  resolver_lockfile.ml  resolver_pubgrub.ml  resolver_registry.ml  resolver_version.ml  scaffold.ml  scaffold_bastion.ml  toml.ml
islands/: .editorconfig  .gitignore  forge.toml
js/: dune  march_browser.ml
lib/cas/: blake3.ml  blake3_stubs.c  cas.ml  discover.ml  dune  hash.ml  pipeline.ml  scc.ml  serialize.ml
lib/eval/: compress_stubs.c  dune  eval.ml
lib/jit/: detect_llvm.sh  dune  jit.ml  jit.mli  jit_orc.ml  jit_orc.mli  jit_orc_stubs.c  jit_stubs.c  repl_jit.ml  repl_jit.mli
lib/tir/: borrow.ml  cprop.ml  dce.ml  defun.ml  dune  escape.ml  fold.ml  fusion.ml  inline.ml  known_call.ml  llvm_emit.ml  lower.ml  mono.ml  native_triple_stub.c  opt.ml  perceus.ml  pp.ml  purity.ml  simplify.ml  tir.ml
lsp/: .gitignore  README.md
runtime/: base64.c  build_wasm.sh  march_compress.c  march_deque.h  march_extras.c  march_gc.c  march_gc.h  march_heap.c  march_heap.h  march_http.c  march_http.h  march_http_evloop.c  march_http_internal.h  march_http_io.c  march_http_io.h  march_http_parse_simd.c  march_http_parse_simd.h  march_http_response.c  march_http_response.h  march_message.c  march_message.h  march_runtime.c  march_runtime.h  march_runtime_wasm.c  march_scheduler.c  march_scheduler.h  march_tls.c  march_tls.h  sha1.c
scripts/: marchup
specs/: 2026-03-18-debugger.md  2026-03-18-docstrings-design.md  2026-03-18-monomorphization.md  2026-03-18-repl-and-actor-diagnostics-design.md  2026-03-18-repl-v2-polish-design.md  2026-03-18-repl-v2-polish.md  2026-03-18-repl-v2.md  2026-03-19-capability-security-design.md  2026-03-19-capability-security.md  2026-03-19-debugger-enhancements.md  2026-03-19-http-library-design.md  2026-03-19-http-library.md  2026-03-19-math-optimization-design.md  2026-03-19-math-optimization-plan.md  2026-03-19-scheduler-design.md  2026-03-19-sorting-and-enum-design.md  2026-03-19-string-system-design.md  2026-03-19-two-tier-scheduler.md  2026-03-20-csv-parser-design.md  2026-03-20-file-module-design.md  2026-03-20-http-server-design.md  actor-lowering.md  (+40 more)
test/: debug_fmt.ml  dune  repl_smoke_test.sh  test_cas.ml  test_fmt.ml  test_heap.c  test_http_native.sh  test_http_response.c  test_http_simd.c  test_jit.ml  test_march.ml  test_oracle.ml  test_properties.ml  test_runtime.c  test_scheduler.c  test_scheduler_mt.c  test_search.ml  test_stdlib_march.ml  test_supervision.ml  wasm_browser_demo.html  wasm_browser_test.march  wasm_browser_test.wasm  wasm_tier1.march
test/depot/: wire_encode_test.march
test/imports/: greeting.march  math_utils.march  test_cross_import.march
test/stdlib/: test_actor.march  test_array.march  test_bastion_cookies.march  test_bastion_csp.march  test_bastion_dev.march  test_bastion_hot_deploy.march  test_bastion_idempotency.march  test_bastion_pubsub.march  test_bastion_routes.march  test_bastion_telemetry.march  test_bastion_test_sandbox.march  test_bigint.march  test_bytes.march  test_channel.march  test_channel_server.march  test_channel_socket.march  test_check.march  test_config.march  test_correlation.march  test_csrf.march  test_csv.march  test_dataframe.march  test_datetime.march  test_decimal.march  test_depot_form.march  test_depot_gate.march  test_depot_migration.march  test_depot_query.march  test_depot_repo.march  test_depot_schema.march  test_depot_test.march  test_derive_json.march  test_derive_json_multi.march  test_dir.march  test_dns.march  test_enum.march  test_env.march  test_file.march  test_flow.march  test_gen.march  (+43 more)
(+451 files in other folders)
