(test
 (name test_march)
 (libraries march_lexer march_parser march_ast march_desugar march_typecheck march_errors march_effects march_eval march_tir march_repl march_debug march_scheduler march_cas alcotest str unix))

; ── C scheduler tests ────────────────────────────────────────────────────
; Compile test_scheduler.c together with the C runtime scheduler and run it
; as part of `dune runtest`.  Uses %{cc} (the OCaml-configured C compiler).
(rule
 (targets test_scheduler_runner)
 (deps    test_scheduler.c
          ../runtime/march_scheduler.c
          ../runtime/march_scheduler.h
          ../runtime/march_deque.h)
 (action  (run %{cc}
               -std=gnu11 -Wall -Wextra -I../runtime
               -DMARCH_NUM_SCHEDULERS=1
               -o %{targets}
               test_scheduler.c ../runtime/march_scheduler.c
               -lpthread)))

(rule
 (alias   runtest)
 (deps    (file test_scheduler_runner))
 (action  (run ./test_scheduler_runner)))

; ── Phase 5: per-process heap, message passing, GC tests ─────────────────
(rule
 (targets test_heap_runner)
 (deps    test_heap.c
          ../runtime/march_heap.c
          ../runtime/march_heap.h
          ../runtime/march_message.c
          ../runtime/march_message.h
          ../runtime/march_gc.c
          ../runtime/march_gc.h)
 (action  (run %{cc}
               -std=gnu11 -Wall -Wextra -O2 -I../runtime
               -o %{targets}
               test_heap.c
               ../runtime/march_heap.c
               ../runtime/march_message.c
               ../runtime/march_gc.c
               -lpthread -lm)))

(rule
 (alias   runtest)
 (deps    (file test_heap_runner))
 (action  (run ./test_heap_runner)))

; Phase 3: multi-threaded scheduler tests (4 schedulers)
(rule
 (targets test_scheduler_mt_runner)
 (deps    test_scheduler_mt.c
          ../runtime/march_scheduler.c
          ../runtime/march_scheduler.h
          ../runtime/march_deque.h)
 (action  (run %{cc} -std=gnu11 -Wall -Wextra -I../runtime
               -o %{targets}
               test_scheduler_mt.c ../runtime/march_scheduler.c
               -lpthread)))

(rule
 (alias   runtest)
 (deps    (file test_scheduler_mt_runner))
 (action  (run ./test_scheduler_mt_runner)))

(test
 (name test_fmt)
 (libraries march_lexer march_parser march_ast march_format alcotest))

(executable
 (name test_oracle)
 (libraries unix))

(rule
 (alias oracle)
 (deps (file %{exe:../bin/main.exe}))
 (action (setenv MARCH_BIN %{exe:../bin/main.exe}
          (run ./test_oracle.exe))))

(test
 (name test_supervision)
 (libraries march_lexer march_parser march_ast march_desugar march_eval alcotest unix))

(test
 (name test_jit)
 (libraries march_jit alcotest))

(test
 (name test_cas)
 (libraries march_tir march_ast march_cas alcotest unix))

(test
 (name test_properties)
 (libraries march_lexer march_parser march_ast march_desugar march_typecheck march_errors march_eval march_tir march_scheduler alcotest qcheck-core qcheck-alcotest))

(test
 (name test_stdlib_march)
 (libraries march_lexer march_parser march_ast march_desugar march_typecheck march_errors march_eval alcotest unix))

(test
 (name test_search)
 (libraries march_search alcotest unix))

(executable
 (name debug_fmt)
 (libraries march_lexer march_parser march_ast march_format))

(rule
 (alias runtest)
 (deps (file %{exe:../bin/main.exe})
       (file imports/test_cross_import.march)
       (file imports/greeting.march)
       (file imports/math_utils.march))
 (action (run %{exe:../bin/main.exe} test
              imports/test_cross_import.march)))
