(library
 (name march_forge)
 (libraries unix march_search march_format yojson digestif march_bastion))

(rule
 (target phase_viewer_html.ml)
 (deps ../../tools/phase-viewer.html)
 (action
  (with-stdout-to %{target}
   (progn
    (echo "let content = {march_phase_viewer|\n")
    (cat %{dep:../../tools/phase-viewer.html})
    (echo "\n|march_phase_viewer}\n")))))
