(library
 (name march_forge)
 (libraries unix march_search march_format yojson digestif))

(rule
 (target notebook_march_src.ml)
 (deps ../tasks/notebook.march)
 (action
  (with-stdout-to %{target}
   (progn
    (echo "let content = {forge_notebook_march|\n")
    (cat %{dep:../tasks/notebook.march})
    (echo "\n|forge_notebook_march}\n")))))


(rule
 (target phase_viewer_html.ml)
 (deps ../../tools/phase-viewer.html)
 (action
  (with-stdout-to %{target}
   (progn
    (echo "let content = {march_phase_viewer|\n")
    (cat %{dep:../../tools/phase-viewer.html})
    (echo "\n|march_phase_viewer}\n")))))
