(library
 (name march_forge)
 (libraries unix march_search march_format march_lint yojson digestif))

(rule
 (target notebook_march_src.ml)
 (deps ../tasks/notebook.march)
 (action
  (with-stdout-to %{target}
   (progn
    (echo "let content = {forge_notebook_march|\n")
    (cat %{dep:../tasks/notebook.march})
    (echo "\n|forge_notebook_march}\n")))))


(rule
 (target notebook_server_march_src.ml)
 (deps ../tasks/notebook_server.march)
 (action
  (with-stdout-to %{target}
   (progn
    (echo "let content = {forge_notebook_server_march|\n")
    (cat %{dep:../tasks/notebook_server.march})
    (echo "\n|forge_notebook_server_march}\n")))))

(rule
 (target phase_viewer_html.ml)
 (deps ../../tools/phase-viewer.html)
 (action
  (with-stdout-to %{target}
   (progn
    (echo "let content = {march_phase_viewer|\n")
    (cat %{dep:../../tools/phase-viewer.html})
    (echo "\n|march_phase_viewer}\n")))))
