(library
 (name march_tir)
 (modules tir pp lower mono defun borrow perceus escape llvm_emit purity fold simplify inline dce cprop opt fusion known_call)
 (libraries march_ast march_typecheck march_modules)
 (foreign_stubs (language c) (names native_triple_stub))
 (preprocess (pps ppx_deriving.show)))
